# easy-amm

./: .gitignore  Anchor.toml  README.md  amm兑换公式推导.excalidraw  package-lock.json  package.json
easy‑amm-ui/: index.html  package-lock.json  package.json
easy‑amm-ui/src/: App.css  App.tsx  anchor.ts
easy‑amm-ui/src/components/: DualDepositForm.tsx  DualWithdrawForm.tsx  SingleDepositForm.tsx  SingleWithdrawForm.tsx  SwapForm.tsx
programs/easy-amm/: Cargo.toml
programs/easy-amm/src/: error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/easy-amm/src/instructions/: deposit.rs  deposit_single.rs  exchange.rs  initialize_swap.rs  shared.rs  withdraw_all.rs  withdraw_single.rs
tests/: easy-amm.ts  user.secret.json
